Fix horizontal scroll embed

--- a/horizontal_scroll_no_mobile/horizontal_scroll.css
+++ b/horizontal_scroll_no_mobile/horizontal_scroll.css
@@ -10,7 +10,7 @@
 
   .horizontal-scroll__container {
     position: -webkit-sticky;
-    position: sticky;
+    position: sticky !important;
     overflow: hidden;
     top: 0;
   }
